--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "bluebird": "^3.5.1",
     "buefy": "^0.6.2",
     "cors-anywhere": "^0.4.1",
+    "geocoder": "^0.2.3",
     "lodash": "^4.17.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
