--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue2-google-maps": "^0.8.6",
+    "vuetrend": "^0.3.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
